After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692400 - udpsrc: fix socket options not getting set on windows, resulting in packet drop in high bitrate movie
udpsrc: fix socket options not getting set on windows, resulting in packet dr...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.0.8
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-01-23 16:19 UTC by Marc Leeman
Modified: 2013-04-29 07:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch [1/2] (1.03 KB, patch)
2013-01-23 16:19 UTC, Marc Leeman
committed Details | Review
patch [2/2] (696 bytes, patch)
2013-01-23 16:20 UTC, Marc Leeman
rejected Details | Review

Description Marc Leeman 2013-01-23 16:19:15 UTC
- include header
- socklen_t is unsigned; socklen_t does not exist in Windows
Comment 1 Marc Leeman 2013-01-23 16:19:49 UTC
Created attachment 234225 [details] [review]
patch [1/2]
Comment 2 Marc Leeman 2013-01-23 16:20:08 UTC
Created attachment 234226 [details] [review]
patch [2/2]
Comment 3 Marc Leeman 2013-01-23 16:21:42 UTC
My mistake, it did not 'fix' the compilation; the socket options were not set in Windows; resulting in packet drop in high bitrate movie content.
Comment 4 Tim-Philipp Müller 2013-01-24 12:52:21 UTC
Could you please re-do the patches mentioning in the commit message body what each of the commit fixes? (i.e. what you wrote here, rather than 'change socklen_t to unsigned int' - we can see what the patch does in the diff :))
Comment 5 Tim-Philipp Müller 2013-02-08 12:11:09 UTC
Comment on attachment 234226 [details] [review]
patch [2/2]

I don't think this is necessarily right for systems where socklen_t is defined?
Comment 6 Tim-Philipp Müller 2013-04-27 10:26:25 UTC
commit 4273eccacea00ddd52210199c9ce49fd2587fc3d
Author: Tim-Philipp Müller <tim@centricular.net>
Date:   Sat Apr 27 11:16:54 2013 +0100

    udpsrc: add includes to get socklen_t defined on Windows
    
    https://bugzilla.gnome.org/show_bug.cgi?id=692400
Comment 7 Tim-Philipp Müller 2013-04-27 10:29:56 UTC
Patch 1 is also obsolete now, and I forgot to mention the real reason to include this in the message as well. Oh well. Wouldn't have happened if you had updated the patch as requested, sorry ;)
Comment 8 Tim-Philipp Müller 2013-04-27 10:30:29 UTC
Comment on attachment 234225 [details] [review]
patch [1/2]

This got committed in some sense.