udpsrc: use g_socket_set_option() to set buffer size with newer GLib versions

So we have to worry less about portability.

https://bugzilla.gnome.org/show_bug.cgi?id=692400

Conflicts:
	gst/udp/gstudpsrc.c