gst/udp/gstudpsrc.c
@@ -112,8 +112,12 @@
 
 #include <gst/net/gstnetaddressmeta.h>
 
+#if GLIB_CHECK_VERSION (2, 35, 7)
+#include <gio/gnetworking.h>
+#else
 #ifdef HAVE_SYS_SOCKET_H
 #include <sys/socket.h>
+#endif
 #endif
 
 GST_DEBUG_CATEGORY_STATIC (udpsrc_debug);
@@ -811,7 +815,39 @@ gst_udpsrc_start (GstBaseSrc * bsrc)
   if (src->timeout)
     g_socket_set_timeout (src->used_socket, src->timeout / GST_SECOND);
 
-#ifdef SO_RCVBUF
+#if GLIB_CHECK_VERSION (2, 35, 7)
+  {
+    gint val = 0;
+
+    if (src->buffer_size != 0) {
+      GError *opt_err = NULL;
+
+      GST_INFO_OBJECT (src, "setting udp buffer of %d bytes", src->buffer_size);
+      /* set buffer size, Note that on Linux this is typically limited to a
+       * maximum of around 100K. Also a minimum of 128 bytes is required on
+       * Linux. */
+      if (!g_socket_set_option (src->used_socket, SOL_SOCKET, SO_RCVBUF,
+              src->buffer_size, &opt_err)) {
+        GST_ELEMENT_WARNING (src, RESOURCE, SETTINGS, (NULL),
+            ("Could not create a buffer of requested %d bytes: %s",
+                src->buffer_size, opt_err->message));
+        g_error_free (opt_err);
+        opt_err = NULL;
+      }
+    }
+
+    /* read the value of the receive buffer. Note that on linux this returns
+     * 2x the value we set because the kernel allocates extra memory for
+     * metadata. The default on Linux is about 100K (which is about 50K
+     * without metadata) */
+    if (g_socket_get_option (src->used_socket, SOL_SOCKET, SO_RCVBUF, &val,
+            NULL)) {
+      GST_INFO_OBJECT (src, "have udp buffer of %d bytes", val);
+    } else {
+      GST_DEBUG_OBJECT (src, "could not get udp buffer size");
+    }
+  }
+#elif defined (SO_RCVBUF)
   {
     gint rcvsize, ret;
     socklen_t len;
@@ -844,6 +880,12 @@ gst_udpsrc_start (GstBaseSrc * bsrc)
       GST_DEBUG_OBJECT (src, "have udp buffer of %d bytes", rcvsize);
     else
       GST_DEBUG_OBJECT (src, "could not get udp buffer size");
+  }
+#else
+  if (src->buffer_size != 0) {
+    GST_WARNING_OBJECT (src, "don't know how to set udp buffer size on this "
+        "OS. Consider upgrading your GLib to >= 2.35.7 and re-compiling the "
+        "GStreamer udp plugin");
   }
 #endif
 
